2007-03-23  Andreas Kupries <andreask@activestate.com>

	* sha256.tcl: Added MD hints.

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sha1.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-11-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sha256c.tcl: Support MSVC as well as gcc.
	* sha256.h:    (critcl2 can use gcc and/or msvc on windows)
	* sha256.c:

2006-10-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: Bumped versions of sha1, sha256 by a patchlevel
	* sha1.man:     due to the changes to the package internals.
	* sha1.tcl:
	* sha1c.tcl:

	* sha256.c: New files implementing sha256 in C
	* sha256.h: Based on critcl.
	* sha256c.tcl:

	* sha256.tcl:  Rewritten to deal with multiple implementations,
	* sha256.test: i.e. tcl and the new critcl one.

2006-10-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sha1.tcl:  Management of multiple implementations rewritten to
	* sha1.test: conform to the expections of the testsuite helper
	  commands. Testsuite rewritten to use the new helpers.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-03-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sha1v1.test: Copies of sha1.{tcl,test} for the v1 line.
	* sha1v1.tcl:  This duplication allows us to get rid of the package
	  index hackery for v1, enables the clean conversion of the code
	  in this directory into Tcl Modules, and allows proper separate
	  development of the two major versions in the future.

2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sha256.test: Fixed use of duplicate test names.

2006-01-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sha1.test: More boilerplate simplified via use of test support.
	* sha256.test:
