@@ -1,3 +1,8 @@
+2007-03-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* sha256.c: gcc 4 has decided that assignment to a cast pointer is
+	to be denied. Therefore added work around.
+
 2007-03-23  Andreas Kupries <andreask@activestate.com>
 
 	* sha256.tcl: Added MD hints.
